refactor: add translations

--- a/locales/en.json
+++ b/locales/en.json
@@ -233,5 +233,26 @@
   "month": "month",
   "year": "year",
   "day": "day",
-  "week": "week"
+  "week": "week",
+  "{count} advanced voices": "{count} advanced voices",
+  "{count} trained LLM models": "{count} trained LLM models",
+  "Test your pronunciation with NLP": "Test your pronunciation with NLP",
+  "Natural Language Processing": "Natural Language Processing",
+  "days": "days",
+  "Answer correction with LLM": "Answer correction with LLM",
+  "Large Language Model": "Large Language Model",
+  "Discount of {discount} until {date}": "Discount of {discount} until {date}",
+  "Only a few remain": "Only a few remain",
+  "There's only": "There's only",
+  "Left only": "Left only",
+  "Only": "Only",
+  "Take advantage already!": "Take advantage already!",
+  "Enjoy now": "Enjoy now",
+  "To take advantage": "To take advantage",
+  "You can choose your own Petutor!": "You can choose your own Petutor!",
+  "With the Petutors, you can train your pronunciation, train your hearing and writing skills in a foreign language!": "With the Petutors, you can train your pronunciation, train your hearing and writing skills in a foreign language!",
+  "Your browser does not support Geolocation": "Your browser does not support Geolocation.",
+  "Try again in another browser!": "Try again in another browser!",
+  "Could not obtain your location": "Could not obtain your location.",
+  "Please allow your location to continue!": "Please allow your location to continue!"
 }
