--- a/locales/es.json
+++ b/locales/es.json
@@ -233,5 +233,26 @@
     "month": "mes",
     "year": "año",
     "day": "día",
-    "week": "semana"
+    "week": "semana",
+    "{count} advanced voices": "{count} voces avanzadas",
+    "{count} trained LLM models": "{count} modelos LLM entrenados",
+    "Test your pronunciation with NLP": "Prueba tu pronunciación con NLP",
+    "Natural Language Processing": "Procesamiento del Lenguaje Natural",
+    "days": "días",
+    "Answer correction with LLM": "Corrección de respuestas con LLM",
+    "Large Language Model": "Modelo de Lenguaje Grande",
+    "Discount of {discount} until {date}": "Descuento de {discount} hasta el {date}",
+    "Only a few remain": "Sólo quedan unos pocos",
+    "Take advantage already!": "¡Aprovecha ya!",
+    "To take advantage": "Aprovechar",
+    "You can choose your own Petutor!": "¡Puedes elegir tu propio Petutor!",
+    "With the Petutors, you can train your pronunciation, train your hearing and writing skills in a foreign language!": "¡Con los Petutores, puedes entrenar tu pronunciación, entrenar tus habilidades de audición y escritura en un idioma extranjero!",
+    "Your browser does not support Geolocation": "Your browser does not support Geolocation.",
+    "Try again in another browser!": "Try again in another browser!",
+    "Could not obtain your location": "Could not obtain your location.",
+    "Please allow your location to continue!": "Please allow your location to continue!",
+    "There's only": "Solo hay",
+    "Left only": "Solo izquierdo",
+    "Only": "Solo",
+    "Enjoy now": "Disfruta ahora"
 }
