--- a/locales/fr.json
+++ b/locales/fr.json
@@ -233,5 +233,26 @@
     "month": "mois",
     "year": "année",
     "day": "jour",
-    "week": "semaine"
+    "week": "semaine",
+    "{count} advanced voices": "{count} voix avancées",
+    "{count} trained LLM models": "{count} modèles LLM entraînés",
+    "Test your pronunciation with NLP": "Testez votre prononciation avec NLP",
+    "Natural Language Processing": "Traitement du langage naturel",
+    "days": "jours",
+    "Answer correction with LLM": "Correction de réponse avec LLM",
+    "Large Language Model": "Modèle de langue large",
+    "Discount of {discount} until {date}": "Remise de {discount} jusqu'au {date}",
+    "Only a few remain": "Il ne reste plus que quelques-uns",
+    "Take advantage already!": "Profitez-en dès maintenant !",
+    "To take advantage": "Pour profiter",
+    "You can choose your own Petutor!": "Vous pouvez choisir votre propre Petutor !",
+    "With the Petutors, you can train your pronunciation, train your hearing and writing skills in a foreign language!": "Avec les Petutors, vous pouvez entraîner votre prononciation, entraîner vos compétences d'écoute et d'écriture dans une langue étrangère !",
+    "Your browser does not support Geolocation": "Votre navigateur ne prend pas en charge la géolocalisation.",
+    "Try again in another browser!": "Réessayez dans un autre navigateur!",
+    "Could not obtain your location": "Impossible d'obtenir votre position.",
+    "Please allow your location to continue!": "Veuillez autoriser votre position pour continuer!",
+    "There's only": "Il n'y a que",
+    "Left only": "Seulement à gauche",
+    "Only": "Seu texto em francês traduzido",
+    "Enjoy now": "Profitez maintenant"
 }
