--- a/locales/it-IT.json
+++ b/locales/it-IT.json
@@ -233,5 +233,26 @@
     "month": "mese",
     "year": "anno",
     "day": "giorno",
-    "week": "settimana"
+    "week": "settimana",
+    "{count} advanced voices": "{count} voci avanzate",
+    "{count} trained LLM models": "{count} modelli LLM addestrati",
+    "Test your pronunciation with NLP": "Testa la tua pronuncia con NLP",
+    "Natural Language Processing": "Elaborazione del linguaggio naturale",
+    "days": "giorni",
+    "Answer correction with LLM": "Correzione delle risposte con LLM",
+    "Large Language Model": "Modello di grande dimensione",
+    "Discount of {discount} until {date}": "Sconto del {discount} fino al {date}",
+    "Only a few remain": "Ne rimangono solo pochi",
+    "Take advantage already!": "Approfittane già!",
+    "To take advantage": "Per approfittare",
+    "You can choose your own Petutor!": "Puoi scegliere il tuo Petutor!",
+    "With the Petutors, you can train your pronunciation, train your hearing and writing skills in a foreign language!": "Con i Petutor, puoi allenare la pronuncia, l'ascolto e le abilità di scrittura in una lingua straniera!",
+    "Your browser does not support Geolocation": "Il tuo browser non supporta la geolocalizzazione.",
+    "Try again in another browser!": "Riprova con un altro browser!",
+    "Could not obtain your location": "Impossibile ottenere la tua posizione.",
+    "Please allow your location to continue!": "Per favore, consenti la tua posizione per continuare!",
+    "There's only": "C'è solo",
+    "Left only": "Solo sinistra",
+    "Only": "Solo",
+    "Enjoy now": "Godersi ora"
 }
