--- a/locales/pt.json
+++ b/locales/pt.json
@@ -233,5 +233,26 @@
     "month": "mês",
     "year": "ano",
     "day": "dia",
-    "week": "semana"
+    "week": "semana",
+    "{count} advanced voices": "{count} vozes avançadas",
+    "{count} trained LLM models": "{count} modelos LLM treinados",
+    "Test your pronunciation with NLP": "Teste sua pronúncia com NLP",
+    "Natural Language Processing": "Processamento de Linguagem Natural",
+    "days": "dias",
+    "Answer correction with LLM": "Correção de resposta com LLM",
+    "Large Language Model": "Modelo de Linguagem Grande",
+    "Discount of {discount} until {date}": "Desconto de {discount} até {date}",
+    "Only a few remain": "Restam apenas alguns",
+    "Take advantage already!": "Aproveite já!",
+    "To take advantage": "Para aproveitar",
+    "You can choose your own Petutor!": "Você pode escolher seu próprio Petutor!",
+    "With the Petutors, you can train your pronunciation, train your hearing and writing skills in a foreign language!": "Com o Petutors, você pode treinar sua pronúncia, treinar suas habilidades de audição e escrita em um idioma estrangeiro!",
+    "Your browser does not support Geolocation": "Seu navegador não suporta Geolocalização.",
+    "Try again in another browser!": "Tente novamente em outro navegador!",
+    "Could not obtain your location": "Não foi possível obter sua localização.",
+    "Please allow your location to continue!": "Por favor, permita sua localização para continuar!",
+    "There's only": "Só tem",
+    "Left only": "Somente à esquerda",
+    "Only": "Somente",
+    "Enjoy now": "Aproveite agora"
 }
