feat: add models and histories

--- a/locales/en.json
+++ b/locales/en.json
@@ -64,14 +64,14 @@
   "Search language": "Search language",
   "No results found": "No results found",
   "Get started": "Get started",
-  "Find the right AI tutor for you": "Find the right AI tutor for you",
+  "Find the right AI petutor for you": "Find the right AI petutor for you",
   "What do you want to learn?": "What do you want to learn?",
   "What's your language level?": "What's your {lang} level?",
   "I'm just starting": "I'm just starting",
   "I know the basics": "I know the basics",
   "I'm conversational": "I'm conversational",
   "I'm fluent in most situations": "I'm fluent in most situations",
-  "Tell us how you’d like to learn to get a personalized choice of AI tutors": "Tell us how you’d like to learn to get a personalized choice of AI tutors",
+  "Tell us how you’d like to learn to get a personalized choice of AI petutors": "Tell us how you’d like to learn to get a personalized choice of AI petutors",
   "You're almost there, just 1 steps to go!": "You're almost there, just {step} steps to go!",
   "Next": "Next",
   "Continue": "Continue",
@@ -254,5 +254,16 @@
   "Your browser does not support Geolocation": "Your browser does not support Geolocation.",
   "Try again in another browser!": "Try again in another browser!",
   "Could not obtain your location": "Could not obtain your location.",
-  "Please allow your location to continue!": "Please allow your location to continue!"
+  "Please allow your location to continue!": "Please allow your location to continue!",
+  "{days} days free trial": "{days} days free trial",
+  "Explore our trained LLM models to test your pronunciation and receive accurate feedback responses": "Explore our trained LLM models to test your pronunciation and receive accurate feedback responses.",
+  "Explore our trained LLM models to test your pronunciation and receive accurate answer feedback": "Explore our trained LLM models to test your pronunciation and receive accurate answer feedback.",
+  "Premium": "Premium",
+  "Shorly": "Shorly",
+  "You do not have permission": "You do not have permission.",
+  "Please try again later": "Please try again later",
+  "An unknown error occurred": "An unknown error occurred.",
+  "Please try again later or contact a system administrator": "Please try again later or contact a system administrator.",
+  "Sign up for our personalized plan to learn a foreign language!": "Sign up for our personalized plan to learn a foreign language!",
+  "Recommended (plural)": "Recommended"
 }
