--- a/locales/es.json
+++ b/locales/es.json
@@ -72,14 +72,14 @@
     "Search language": "Buscar idioma",
     "No results found": "No se encontraron resultados",
     "Get started": "Empezar",
-    "Find the right AI tutor for you": "Encuentra el tutor de IA adecuado para ti",
+    "Find the right AI petutor for you": "Encuentra el petutor de IA adecuado para ti",
     "What do you want to learn?": "¿Qué quieres aprender?",
     "What's your language level?": "¿Cuál es tu nivel de {lang}?",
     "I'm just starting": "Estoy comenzando",
     "I know the basics": "Conozco lo básico",
     "I'm conversational": "Tengo habilidades de conversación",
     "I'm fluent in most situations": "Hablo fluidamente en la mayoría de las situaciones",
-    "Tell us how you’d like to learn to get a personalized choice of AI tutors": "Cuéntanos cómo te gustaría aprender para obtener una selección personalizada de tutores de IA",
+    "Tell us how you’d like to learn to get a personalized choice of AI petutors": "Cuéntanos cómo te gustaría aprender para obtener una selección personalizada de petutors de IA",
     "You're almost there, just 1 steps to go!": "¡Casi estás listo, solo faltan {step} pasos!",
     "Next": "Siguiente",
     "Continue": "Continuar",
@@ -254,5 +254,16 @@
     "There's only": "Solo hay",
     "Left only": "Solo izquierdo",
     "Only": "Solo",
-    "Enjoy now": "Disfruta ahora"
+    "Enjoy now": "Disfruta ahora",
+    "{days} days free trial": "{days} días de prueba gratuitos",
+    "Explore our trained LLM models to test your pronunciation and receive accurate feedback responses": "Explore nuestros modelos LLM entrenados para probar su pronunciación y recibir respuestas precisas de retroalimentación.",
+    "Explore our trained LLM models to test your pronunciation and receive accurate answer feedback": "Explore nossos modelos treinados de LLM para testar sua pronúncia e receber um feedback preciso das respostas.",
+    "Premium": "Premium",
+    "Shorly": "Shorly",
+    "You do not have permission": "No tienes permiso.",
+    "Please try again later": "Por favor, inténtelo de nuevo más tarde.",
+    "An unknown error occurred": "Ocurrió un error desconocido.",
+    "Please try again later or contact a system administrator": "Por favor, inténtelo de nuevo más tarde o contacte a un administrador del sistema.",
+    "Sign up for our personalized plan to learn a foreign language!": "¡Regístrate en nuestro plan personalizado para aprender un idioma extranjero!",
+    "Recommended (plural)": "Recomendados"
 }
