--- a/locales/fr.json
+++ b/locales/fr.json
@@ -64,14 +64,14 @@
     "Search language": "Langue de recherche",
     "No results found": "Aucun résultat trouvé",
     "Get started": "Commencer",
-    "Find the right AI tutor for you": "Trouvez le bon tuteur en IA pour vous",
+    "Find the right AI petutor for you": "Trouvez le bon petutor en IA pour vous",
     "What do you want to learn?": "Que voulez-vous apprendre?",
     "What's your language level?": "Quel est votre niveau en {lang}?",
     "I'm just starting": "Je débute juste",
     "I know the basics": "Je connais les bases",
     "I'm conversational": "Je sais converser",
     "I'm fluent in most situations": "Je parle couramment dans la plupart des situations",
-    "Tell us how you’d like to learn to get a personalized choice of AI tutors": "Dites-nous comment vous souhaitez apprendre pour obtenir un choix personnalisé de tuteurs en IA",
+    "Tell us how you’d like to learn to get a personalized choice of AI petutors": "Dites-nous comment vous souhaitez apprendre pour obtenir un choix personnalisé de petutors en IA",
     "You're almost there, just 1 steps to go!": "Vous y êtes presque, il ne reste plus que {step} étape à faire!",
     "Next": "Suivant",
     "Continue": "Continuer",
@@ -254,5 +254,16 @@
     "There's only": "Il n'y a que",
     "Left only": "Seulement à gauche",
     "Only": "Seu texto em francês traduzido",
-    "Enjoy now": "Profitez maintenant"
+    "Enjoy now": "Profitez maintenant",
+    "{days} days free trial": "{days} jours d'essai gratuit",
+    "Explore our trained LLM models to test your pronunciation and receive accurate feedback responses": "Explorez nos modèles LLM entraînés pour tester votre prononciation et recevoir des réponses de retour précises.",
+    "Explore our trained LLM models to test your pronunciation and receive accurate answer feedback": "Explorez nos modèles de LLM entraînés pour tester votre prononciation et obtenir des commentaires précis sur les réponses.",
+    "Premium": "Premium",
+    "Shorly": "Shorly",
+    "You do not have permission": "Vous n'avez pas la permission.",
+    "Please try again later": "Veuillez réessayer ultérieurement",
+    "An unknown error occurred": "Une erreur inconnue s'est produite.",
+    "Please try again later or contact a system administrator": "Veuillez réessayer ultérieurement ou contacter un administrateur système.",
+    "Sign up for our personalized plan to learn a foreign language!": "Inscrivez-vous à notre plan personnalisé pour apprendre une langue étrangère !",
+    "Recommended (plural)": "Recommandé"
 }
