--- a/locales/it-IT.json
+++ b/locales/it-IT.json
@@ -64,14 +64,14 @@
     "Search language": "Lingua di ricerca",
     "No results found": "Nessun risultato trovato",
     "Get started": "Inizia",
-    "Find the right AI tutor for you": "Trova il tutor di intelligenza artificiale giusto per te",
+    "Find the right AI petutor for you": "Trova il petutor di intelligenza artificiale giusto per te",
     "What do you want to learn?": "Cosa vuoi imparare?",
     "What's your language level?": "Qual è il tuo livello di {lang}?",
     "I'm just starting": "Sto solo iniziando",
     "I know the basics": "Conosco le basi",
     "I'm conversational": "Sono conversazionale",
     "I'm fluent in most situations": "Sono fluente nella maggior parte delle situazioni",
-    "Tell us how you’d like to learn to get a personalized choice of AI tutors": "Dicci come vorresti imparare per ottenere una scelta personalizzata di tutor di intelligenza artificiale",
+    "Tell us how you’d like to learn to get a personalized choice of AI petutors": "Dicci come vorresti imparare per ottenere una scelta personalizzata di petutor di intelligenza artificiale",
     "You're almost there, just 1 steps to go!": "Ci sei quasi, manca solo {step} passaggio!",
     "Next": "Avanti",
     "Continue": "Continua",
@@ -254,5 +254,16 @@
     "There's only": "C'è solo",
     "Left only": "Solo sinistra",
     "Only": "Solo",
-    "Enjoy now": "Godersi ora"
+    "Enjoy now": "Godersi ora",
+    "{days} days free trial": "{days} giorni di prova gratuita",
+    "Explore our trained LLM models to test your pronunciation and receive accurate feedback responses": "Esplora i nostri modelli LLM addestrati per testare la tua pronuncia e ricevere risposte precise.",
+    "Explore our trained LLM models to test your pronunciation and receive accurate answer feedback": "Esplora i nostri modelli LLM addestrati per testare la tua pronuncia e ricevere un feedback accurato sulla risposta.",
+    "Premium": "Premium",
+    "Shorly": "Shorly",
+    "You do not have permission": "Non hai il permesso necessario.",
+    "Please try again later": "Per favore riprova più tardi",
+    "An unknown error occurred": "Si è verificato un errore sconosciuto.",
+    "Please try again later or contact a system administrator": "Per favore riprova più tardi o contatta un amministratore di sistema.",
+    "Sign up for our personalized plan to learn a foreign language!": "Iscriviti al nostro piano personalizzato per imparare una lingua straniera!",
+    "Recommended (plural)": "Consigliati"
 }
