--- a/locales/pt.json
+++ b/locales/pt.json
@@ -64,13 +64,13 @@
     "Search language": "Pesquisar idioma",
     "No results found": "Nenhum resultado encontrado",
     "Get started": "Começar",
-    "Find the right AI tutor for you": "Encontre o tutor de IA certo para você",
+    "Find the right AI petutor for you": "Encontre o petutor de IA certo para você",
     "What do you want to learn?": "O que você quer aprender?",
     "I'm just starting": "Estou começando",
     "I know the basics": "Eu conheço o básico",
     "I'm conversational": "Eu consigo conversar",
     "I'm fluent in most situations": "Sou fluente na maioria das situações",
-    "Tell us how you’d like to learn to get a personalized choice of AI tutors": "Diga-nos como você gostaria de aprender para obter uma escolha personalizada de tutores de IA",
+    "Tell us how you’d like to learn to get a personalized choice of AI petutors": "Diga-nos como você gostaria de aprender para obter uma escolha personalizada de petutors de IA",
     "You're almost there, just 1 steps to go!": "Você está quase lá, apenas mais {step} etapa a percorrer!",
     "Next": "Próximo",
     "Continue": "Continuar",
@@ -254,5 +254,16 @@
     "There's only": "Só tem",
     "Left only": "Somente à esquerda",
     "Only": "Somente",
-    "Enjoy now": "Aproveite agora"
+    "Enjoy now": "Aproveite agora",
+    "{days} days free trial": "{days} dias de teste gratuito",
+    "Explore our trained LLM models to test your pronunciation and receive accurate feedback responses": "Explore nossos modelos LLM treinados para testar sua pronúncia e receber respostas precisas de feedback.",
+    "Explore our trained LLM models to test your pronunciation and receive accurate answer feedback": "Explore nossos modelos LLM treinados para testar sua pronúncia e receber feedback preciso das respostas.",
+    "Premium": "Premium",
+    "Shorly": "Em breve",
+    "You do not have permission": "Você não possui permissão.",
+    "Please try again later": "Por favor, tente novamente mais tarde.",
+    "An unknown error occurred": "Ocorreu um erro desconhecido.",
+    "Please try again later or contact a system administrator": "Por favor, tente novamente mais tarde ou entre em contato com um administrador do sistema.",
+    "Sign up for our personalized plan to learn a foreign language!": "Inscreva-se em nosso plano personalizado para aprender um idioma estrangeiro!",
+    "Recommended (plural)": "Recomendados"
 }
