feat: add subscription cancellation

--- a/locales/en.json
+++ b/locales/en.json
@@ -272,5 +272,27 @@
   "Pronounce any word and it will appear here": "Pronounce any word and it will appear here",
   "No content": "No content",
   "Pronounce": "Pronounce",
-  "Your trial period will expire, there are still:": "Your trial period will expire, there are still:"
+  "Your trial period will expire, there are still:": "Your trial period will expire, there are still:",
+  "MMMM dd, yyyy 'at' h:mm aa": "MMMM dd, yyyy 'at' h:mm aa",
+  "MMMM dd, yyyy": "MMMM dd, yyyy",
+  "Started on: {date}": "Started on: {date}",
+  "Ended on: {date}": "Ended on: {date}",
+  "Will end on: {date}": "Will end on: {date}",
+  "Free trial period from {fromDate} to {toDate}": "Free trial period from {fromDate} to {toDate}",
+  "Trial period has expired": "Trial period has expired",
+  "You are in the trial period": "You are in the trial period",
+  "Subscription canceled": "Subscription canceled",
+  "Cancel subscription": "Cancel subscription",
+  "Are you sure you want to cancel your subscription?": "Are you sure you want to cancel your subscription?",
+  "This action is irreversible": "This action is irreversible",
+  "Subscription successfully canceled!": "Subscription successfully canceled!",
+  "We hope you come back someday": "We hope you come back someday.",
+  "Something went wrong while trying to cancel your subscription!": "Something went wrong while trying to cancel your subscription!",
+  "If you see this message, please contact support": "If you see this message, please contact support.",
+  "Back": "Back",
+  "Plans": "Plans",
+  "My plans": "My plans",
+  "Current subscription billing cycle": "Current subscription billing cycle",
+  "Hey! Noticed any issues with your subscription?": "Hey! Noticed any issues with your subscription?",
+  "Talk to support by clicking here": "Talk to support by clicking <span>here</span>"
 }
