--- a/locales/es.json
+++ b/locales/es.json
@@ -247,10 +247,6 @@
     "To take advantage": "Aprovechar",
     "You can choose your own Petutor!": "¡Puedes elegir tu propio Petutor!",
     "With the Petutors, you can train your pronunciation, train your hearing and writing skills in a foreign language!": "¡Con los Petutores, puedes entrenar tu pronunciación, entrenar tus habilidades de audición y escritura en un idioma extranjero!",
-    "Your browser does not support Geolocation": "Your browser does not support Geolocation.",
-    "Try again in another browser!": "Try again in another browser!",
-    "Could not obtain your location": "Could not obtain your location.",
-    "Please allow your location to continue!": "Please allow your location to continue!",
     "There's only": "Solo hay",
     "Left only": "Solo izquierdo",
     "Only": "Solo",
@@ -272,5 +268,31 @@
     "Pronounce any word and it will appear here": "Pronuncie cualquier palabra y aparecerá aquí",
     "No content": "No hay contenido",
     "Pronounce": "Pronunciar",
-    "Your trial period will expire, there are still:": "Su período de prueba expirará, todavía quedan:"
+    "Your trial period will expire, there are still:": "Su período de prueba expirará, todavía quedan:",
+    "MMMM dd, yyyy 'at' h:mm aa": "MMMM dd, yyyy 'a las' h:mm aa",
+    "MMMM dd, yyyy": "MMMM dd, yyyy",
+    "Started on: {date}": "Comenzó el: {date}",
+    "Ended on: {date}": "Terminó el: {date}",
+    "Will end on: {date}": "Finalizará el: {date}",
+    "Free trial period from {fromDate} to {toDate}": "Periodo de prueba gratuito desde {fromDate} hasta {toDate}",
+    "Trial period has expired": "El período de prueba ha expirado",
+    "You are in the trial period": "Está en el período de prueba",
+    "Subscription canceled": "Suscripción cancelada",
+    "Cancel subscription": "Cancelar suscripción",
+    "Are you sure you want to cancel your subscription?": "¿Está seguro de que desea cancelar su suscripción?",
+    "This action is irreversible": "Esta acción es irreversible",
+    "Subscription successfully canceled!": "¡Suscripción cancelada con éxito!",
+    "We hope you come back someday": "Esperamos que vuelva algún día",
+    "Something went wrong while trying to cancel your subscription!": "¡Algo salió mal al intentar cancelar su suscripción!",
+    "If you see this message, please contact support": "Si ve este mensaje, póngase en contacto con el soporte",
+    "Back": "Volver",
+    "Plans": "Planes",
+    "My plans": "Mis planes",
+    "Current subscription billing cycle": "Ciclo de facturación actual de la suscripción",
+    "Hey! Noticed any issues with your subscription?": "¡Oye! ¿Has notado algún problema con tu suscripción?",
+    "Talk to support by clicking here": "Hable con el soporte haciendo clic <span>aquí</span>",
+    "Your browser does not support Geolocation": "Tu navegador no admite la geolocalización.",
+    "Try again in another browser!": "¡Inténtalo de nuevo en otro navegador!",
+    "Could not obtain your location": "No se pudo obtener tu ubicación.",
+    "Please allow your location to continue!": "¡Permite tu ubicación para continuar!"
 }
