--- a/locales/fr.json
+++ b/locales/fr.json
@@ -272,5 +272,27 @@
     "Pronounce any word and it will appear here": "Prononcez n'importe quel mot et il apparaîtra ici",
     "No content": "Aucun contenu",
     "Pronounce": "Prononciation",
-    "Your trial period will expire, there are still:": "Votre période d'essai expirera bientôt, il reste encore :"
+    "Your trial period will expire, there are still:": "Votre période d'essai expirera bientôt, il reste encore :",
+    "MMMM dd, yyyy 'at' h:mm aa": "dd MMMM yyyy 'à' h:mm aa",
+    "MMMM dd, yyyy": "dd MMMM yyyy",
+    "Started on: {date}": "Commencé le : {date}",
+    "Ended on: {date}": "Terminé le : {date}",
+    "Will end on: {date}": "Se terminera le : {date}",
+    "Free trial period from {fromDate} to {toDate}": "Période d'essai gratuit du {fromDate} au {toDate}",
+    "Trial period has expired": "La période d'essai a expiré",
+    "You are in the trial period": "Vous êtes dans la période d'essai",
+    "Subscription canceled": "Abonnement annulé",
+    "Cancel subscription": "Annuler l'abonnement",
+    "Are you sure you want to cancel your subscription?": "Êtes-vous sûr de vouloir annuler votre abonnement ?",
+    "This action is irreversible": "Cette action est irréversible",
+    "Subscription successfully canceled!": "Abonnement annulé avec succès !",
+    "Something went wrong while trying to cancel your subscription!": "Une erreur s'est produite lors de la tentative d'annulation de votre abonnement !",
+    "Back": "Retour",
+    "Plans": "Plans",
+    "My plans": "Mes plans",
+    "Hey! Noticed any issues with your subscription?": "Hé ! Avez-vous remarqué des problèmes avec votre abonnement ?",
+    "Talk to support by clicking here": "Parlez au support en cliquant <span>ici</span>",
+    "Current subscription billing cycle": "Cycle de facturation actuel de l'abonnement",
+    "We hope you come back someday": "Nous espérons que vous reviendrez un jour.",
+    "If you see this message, please contact support": "Si vous voyez ce message, veuillez contacter le support."
 }
