--- a/locales/it-IT.json
+++ b/locales/it-IT.json
@@ -272,5 +272,27 @@
     "Pronounce any word and it will appear here": "Pronuncia qualsiasi parola e apparirà qui",
     "No content": "Nessun contenuto",
     "Pronounce": "Pronuncia",
-    "Your trial period will expire, there are still:": "Il tuo periodo di prova scadrà, ci sono ancora:"
+    "Your trial period will expire, there are still:": "Il tuo periodo di prova scadrà, ci sono ancora:",
+    "MMMM dd, yyyy 'at' h:mm aa": "dd MMMM yyyy 'alle' HH:mm",
+    "MMMM dd, yyyy": "dd MMMM yyyy",
+    "Started on: {date}": "Iniziato il: {date}",
+    "Ended on: {date}": "Terminato il {date}",
+    "Will end on: {date}": "Terminerà il {date}",
+    "Free trial period from {fromDate} to {toDate}": "Periodo di prova gratuito dal {fromDate} al {toDate}",
+    "Trial period has expired": "Il periodo di prova è scaduto",
+    "You are in the trial period": "Sei nel periodo di prova",
+    "Subscription canceled": "Abbonamento annullato",
+    "Cancel subscription": "Annulla abbonamento",
+    "Are you sure you want to cancel your subscription?": "Sei sicuro di voler annullare l'abbonamento?",
+    "This action is irreversible": "Questa azione è irreversibile",
+    "Subscription successfully canceled!": "Abbonamento annullato con successo!",
+    "Something went wrong while trying to cancel your subscription!": "Qualcosa è andato storto durante il tentativo di annullare l'abbonamento!",
+    "Back": "Indietro",
+    "Plans": "Piani",
+    "My plans": "I miei piani",
+    "Hey! Noticed any issues with your subscription?": "Ehi! Hai riscontrato problemi con il tuo abbonamento?",
+    "Talk to support by clicking here": "Parla con il supporto cliccando <span>qui</span>",
+    "Current subscription billing cycle": "Ciclo di fatturazione corrente dell'abbonamento",
+    "We hope you come back someday": "Speriamo che tu torni un giorno.",
+    "If you see this message, please contact support": "Se vedi questo messaggio, contatta l'assistenza."
 }
