--- a/locales/pt.json
+++ b/locales/pt.json
@@ -272,5 +272,27 @@
     "Pronounce any word and it will appear here": "Pronuncie qualquer palavra e ela aparecerá aqui",
     "No content": "Sem conteúdo",
     "Pronounce": "Pronuncie",
-    "Your trial period will expire, there are still:": "Seu período de teste terminará em breve, ainda restam:"
+    "Your trial period will expire, there are still:": "Seu período de teste terminará em breve, ainda restam:",
+    "MMMM dd, yyyy 'at' h:mm aa": "dd 'de' MMMM 'de' yyyy 'às' HH:mm",
+    "MMMM dd, yyyy": "dd 'de' MMMM 'de' yyyy",
+    "Started on: {date}": "Iniciado em: {date}",
+    "Ended on: {date}": "Finalizado em: {date}",
+    "Will end on: {date}": "Vai terminar em: {date}",
+    "Free trial period from {fromDate} to {toDate}": "Período de teste gratuito de {fromDate} até {toDate}",
+    "Trial period has expired": "Período de teste expirou",
+    "You are in the trial period": "Você está no período de teste",
+    "Subscription canceled": "Assinatura cancelada",
+    "Cancel subscription": "Cancelar assinatura",
+    "Are you sure you want to cancel your subscription?": "Tem certeza de que deseja cancelar sua assinatura?",
+    "This action is irreversible": "Essa ação é irreversível",
+    "Subscription successfully canceled!": "Assinatura cancelada com sucesso!",
+    "Something went wrong while trying to cancel your subscription!": "Ocorreu um erro ao tentar cancelar sua assinatura!",
+    "Back": "Voltar",
+    "Plans": "Planos",
+    "My plans": "Meus planos",
+    "Hey! Noticed any issues with your subscription?": "Ei! Notou algum problema com sua assinatura?",
+    "Talk to support by clicking here": "Fale com o suporte clicando <span>aqui</span>",
+    "Current subscription billing cycle": "Ciclo de faturamento atual da assinatura",
+    "We hope you come back someday": "Esperamos que você volte algum dia.",
+    "If you see this message, please contact support": "Se você ver esta mensagem, por favor, entre em contato com o suporte."
 }
